fix register goggle
